firebase-debug.log
[debug] [2017-08-24T23:14:17.645Z] ----------------------------------------------------------------------
[debug] [2017-08-24T23:14:17.650Z] Command:       /Users/deadsalt/.nvm/versions/node/v6.11.2/bin/node /Users/deadsalt/.nvm/versions/node/v6.11.2/bin/firebase serve --only functions
[debug] [2017-08-24T23:14:17.651Z] CLI Version:   3.9.2
[debug] [2017-08-24T23:14:17.651Z] Platform:      darwin
[debug] [2017-08-24T23:14:17.651Z] Node Version:  v6.11.2
[debug] [2017-08-24T23:14:17.651Z] Time:          Fri Aug 25 2017 11:14:17 GMT+1200 (NZST)
[debug] [2017-08-24T23:14:17.652Z] ----------------------------------------------------------------------
[debug] 
[debug] [2017-08-24T23:14:17.670Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2017-08-24T23:14:17.671Z] > authorizing via signed-in user
[debug] [2017-08-24T23:14:17.674Z] >>> HTTP REQUEST GET https://admin.firebase.com/v1/projects/bloodmagic-ff7cb  
 Fri Aug 25 2017 11:14:17 GMT+1200 (NZST)
[debug] [2017-08-24T23:14:21.386Z] <<< HTTP RESPONSE 200
[debug] [2017-08-24T23:14:21.388Z] >>> HTTP REQUEST GET https://admin.firebase.com/v1/database/bloodmagic-ff7cb/tokens  
 Fri Aug 25 2017 11:14:21 GMT+1200 (NZST)
[debug] [2017-08-24T23:14:22.370Z] <<< HTTP RESPONSE 200
[info] 
[info] === Serving from '/Users/deadsalt/Projects/bloodmagic/bloodmagic-spells'...
[info] 
[info] i  functions: Preparing to emulate HTTPS functions. Support for other event types coming soon.
[debug] [2017-08-24T23:14:23.057Z] >>> HTTP REQUEST GET https://appengine.googleapis.com/v1/apps/bloodmagic-ff7cb  
 Fri Aug 25 2017 11:14:23 GMT+1200 (NZST)
[debug] [2017-08-24T23:14:23.057Z] >>> HTTP REQUEST GET https://apikeys.googleapis.com/v1/projects/bloodmagic-ff7cb/apiKeys  
 Fri Aug 25 2017 11:14:23 GMT+1200 (NZST)
[debug] [2017-08-24T23:14:24.424Z] <<< HTTP RESPONSE 200
[debug] [2017-08-24T23:14:24.516Z] <<< HTTP RESPONSE 200
[warn] ⚠  functions: Failed to load functions source code. Ensure that you have the latest SDK by running npm i --save firebase-functions inside the functions directory. Please note that emulation of custom config values are not supported yet. Run firebase serve --only hosting to only serve hosting files.

FirebaseError: Error occurred while parsing your function triggers.

/Users/deadsalt/Projects/bloodmagic/bloodmagic-spells/functions/spells/process.js:77
      }).on('finish', );
                      ^

SyntaxError: Unexpected token )
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/Users/deadsalt/Projects/bloodmagic/bloodmagic-spells/functions/index.js:11:19)
[info] i  functions: No HTTPS functions emulated. Support for other function types are coming soon.
